WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198501
Fix 32-bit/64-bit mismatch in PointerCaptureController::elementWasRemoved
https://bugs.webkit.org/show_bug.cgi?id=198501
Summary
Fix 32-bit/64-bit mismatch in PointerCaptureController::elementWasRemoved
Keith Rollin
Reported
2019-06-03 15:25:13 PDT
keyAndValue.key is a uint64_t, whereas pointerId is a size_t, which is 32-bits on some platforms. This mismatch is normally just a warning, but breaks builds where warnings are treated as errors. Address this mismatch by explicitly casting keyAndValue.key to a size_t.
Attachments
Patch
(2.78 KB, patch)
2019-06-03 17:58 PDT
,
Keith Rollin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-06-03 15:25:29 PDT
<
rdar://problem/51370464
>
Keith Rollin
Comment 2
2019-06-03 15:39:06 PDT
The bit about size_t appears to be incorrect. It looks like PointerID is just an int32_t. I'm now curious as to why this conversion issue doesn't hit all platforms.
Keith Rollin
Comment 3
2019-06-03 16:44:14 PDT
64-to-32 bit conversion warnings are disabled for arm64. That's why most builds succeed. However, some products build for armv7k, which does not disable this conversion. It's the build for this architecture that's failing. Source/WebCore/Configurations/Base.xcconfig 78:GCC_WARN_64_TO_32_BIT_CONVERSION = YES; 79:GCC_WARN_64_TO_32_BIT_CONVERSION[arch=arm64*] = NO; 80:GCC_WARN_64_TO_32_BIT_CONVERSION[arch=x86_64] = NO;
Keith Rollin
Comment 4
2019-06-03 17:09:03 PDT
See also
Bug 107093
.
Keith Rollin
Comment 5
2019-06-03 17:58:50 PDT
Created
attachment 371233
[details]
Patch
Chris Dumez
Comment 6
2019-06-03 18:26:26 PDT
Comment on
attachment 371233
[details]
Patch r=me
WebKit Commit Bot
Comment 7
2019-06-04 10:59:58 PDT
Comment on
attachment 371233
[details]
Patch Clearing flags on attachment: 371233 Committed
r246072
: <
https://trac.webkit.org/changeset/246072
>
WebKit Commit Bot
Comment 8
2019-06-04 10:59:59 PDT
All reviewed patches have been landed. Closing bug.
Antoine Quint
Comment 9
2019-06-05 00:37:31 PDT
Thanks for catching that Keith.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug